--- a/assets/PerWebCSS.css
+++ b/assets/PerWebCSS.css
@@ -13,12 +13,12 @@
       padding-top: 55px;
   }
 
-  .navbar {
+  /* .navbar {
     background-color: #333;
     position: fixed;
     top: 0;
     width: 100%;
-}
+} */
 
   .img-circle {
     width: 18%;
@@ -31,8 +31,8 @@
     font-family: Verdana;
     font-size: 1.2em;
     font-weight: bold;
-    padding-top: 80px;
-    padding-left: 20px;
+    padding-top: 5 px;
+    padding-left: 40px;
   }
   p {
     font-size: 20px;
@@ -64,24 +64,6 @@
     margin: auto;
   }
 
-  nav ul li{
-    display:inline-block;
-    list-style:none;
-    width:160px;
-    text-align:center;
-    font-family:Helvetica, sans-serif;
-    color:black;
-    padding:10px 0 10px 0;
-  }
-  
-  nav ul{
-    border: 3px solid black;
-    position:absolute;
-    right: 300px;
-    width:50%;
-    padding:0;
-  }
-
   @keyframes first {
     from {
       width: 10px; height: 20px;
@@ -103,8 +85,8 @@
     width:25%;
     float: left; 
     position: absolute; 
-    left:320px; 
-    top: 70px;
+    left:330px; 
+    top: 170px;
   }
   input, textarea  {
     font-family: Helvetica, Arial, sans-serif;
@@ -131,7 +113,7 @@
   #icons{
     position: absolute;
     left: 530px;
-    top:400px;
+    top:435px;
     padding: 0px;
     width:35%;
     padding: 10px;
