--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,11 +3,34 @@
 <head>
 <meta charset="utf-8">
 <title>M07 Guestbook</title>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/
-bootstrap.min.css">
-<link rel="stylesheet" href="/guestbook.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<title>Elizabeth Pisarek</title>
+<link rel="stylesheet"  type="text/css" href="PerWebCSS.css" />
 </head>
-<body class="container">
+<body>
+  <nav class="navbar navbar-expand-sm bg-light">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="home.html">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">CONTACT</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="index">GUESTBOOK</a>
+          </li>
+      </ul>
+    </nav>
+    <br>
+    <br>
+    <br>
 <h1>
 Express Guestbook
 <a href="/new-entry" class="btn btn-primary pull-right">
